plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/jsMain/kotlin/transitiveStory/bottomActual/intermediateSrc/IntermediateMPPClassInBottomActual.kt
package transitiveStory.bottomActual.intermediateSrc

actual class <!LINE_MARKER("descr='Has expects in multimod-hmpp.top-mpp.jsJvm18iOSMain module'")!>IntermediateMPPClassInBottomActual<!>
